--- a/src/analysis/proposal_figures.ipynb
+++ b/src/analysis/proposal_figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,24 +13,24 @@
     "import matplotlib.pyplot as plt\n",
     "import geopandas as gpd\n",
     "from shapely.geometry import Polygon\n",
-    "import contextily as cx"
+    "#import contextily as cx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dir_p = '/SNOWDATA/uavsar/imgs'\n",
-    "# res = pd.DataFrame()\n",
-    "# for i, fp in enumerate(glob.glob(os.path.join(dir_p, '*/*.csv'), recursive=True)):\n",
-    "#     df = pd.read_csv(fp)\n",
-    "#     sub = df[['start time of acquisition for pass 1','stop time of acquisition for pass 1','start time of acquisition for pass 2','stop time of acquisition for pass 2','peg heading','approximate upper left latitude',\n",
-    "# 'approximate upper left longitude','approximate upper right latitude','approximate upper right longitude','approximate lower left latitude','approximate lower left longitude','approximate lower right latitude','approximate lower right longitude']]\n",
-    "#     sub['name'] = os.path.basename(fp)\n",
-    "#     res = res.append(sub.iloc[0], ignore_index=True)\n",
-    "# res.to_csv('../../figures/proposal/imgs_map_meta.csv')"
+    "dir_p = '/SNOWDATA/uavsar/imgs'\n",
+    "res = pd.DataFrame()\n",
+    "for i, fp in enumerate(glob.glob(os.path.join(dir_p, '*/*.csv'), recursive=True)):\n",
+    "    df = pd.read_csv(fp)\n",
+    "    sub = df[['start time of acquisition for pass 1','stop time of acquisition for pass 1','start time of acquisition for pass 2','stop time of acquisition for pass 2','peg heading','approximate upper left latitude',\n",
+    "'approximate upper left longitude','approximate upper right latitude','approximate upper right longitude','approximate lower left latitude','approximate lower left longitude','approximate lower right latitude','approximate lower right longitude']]\n",
+    "    sub['name'] = os.path.basename(fp)\n",
+    "    res = res.append(sub.iloc[0], ignore_index=True)\n",
+    "res.to_csv('../../figures/proposal/imgs_map_meta.csv')"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   },
   "orig_nbformat": 4
  },
