--- a/src/insar_stack/download.ipynb
+++ b/src/insar_stack/download.ipynb
@@ -53,6 +53,48 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unzipping: 100%|██████████| 20/20 [01:58<00:00,  5.91s/file]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fd9a431bf4c841bf8e2aad447eaa9769",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading lowman_23205_21019-018_21021-006_0006d_s01_L090_01_int_grd.zip:   0%|          | 0.00/4.66G [00:00…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unzipping: 100%|██████████| 20/20 [01:40<00:00,  5.03s/file]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "558f55b16df947a69ae42fa92248d462",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading lowman_05208_21017-019_21019-019_0006d_s01_L090_01_int_grd.zip:   0%|          | 0.00/5.37G [00:00…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
