kelvin issues switching to local

--- a/src/slc_stack/download/download_slc_stack.ipynb
+++ b/src/slc_stack/download/download_slc_stack.ipynb
@@ -45,6 +45,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## From : https://uavsar.jpl.nasa.gov/cgi-bin/product.pl?jobName=lowman_23205_01#data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
