--- a/src/slc_stack/jpl_interferogram_compare.ipynb
+++ b/src/slc_stack/jpl_interferogram_compare.ipynb
@@ -7,8 +7,10 @@
    "outputs": [],
    "source": [
     "import rasterio\n",
-    "from os.path import basename, dirname, exists, join\n",
-    "from glob import glob"
+    "from rasterio.plot import show\n",
+    "from os.path import basename, dirname, exists, join, expanduser\n",
+    "from glob import glob\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -18,37 +20,14 @@
    "outputs": [],
    "source": [
     "work_dir = '/scratch/zacharykeskinen/'\n",
+    "fig_dir = expanduser('~/uavsar/figures/slc_stack')\n",
     "inc_fp = glob(join(work_dir,'*.tiff'))[0]\n",
-    "coh_isce = glob(join(work_dir,'merge','*','*cor*.tif'))\n",
-    "unw_isce = glob(join(work_dir,'merge','*','*unw*.tif'))\n",
-    "lidar = glob(join(work_dir,'lidar','banner','*.tiff'))\n",
-    "coh_jpl = glob(join(work_dir,'jpl','*','*cor*.tif'))\n",
-    "unw_jpl = glob(join(work_dir,'jpl','*','*unw*.tif'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/scratch/zacharykeskinen/lidar/banner/snow_on.tiff',\n",
-       " '/scratch/zacharykeskinen/lidar/banner/snow_on_wgs84.tiff',\n",
-       " '/scratch/zacharykeskinen/lidar/banner/snow_free.tiff',\n",
-       " '/scratch/zacharykeskinen/lidar/banner/snow_free_wgs84.tiff',\n",
-       " '/scratch/zacharykeskinen/lidar/banner/snow_free_veg.tiff',\n",
-       " '/scratch/zacharykeskinen/lidar/banner/snow_free_veg_wgs84.tiff']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lidar"
+    "coh_isce = glob(join(work_dir,'isce','*','*cor*.tif'))\n",
+    "unw_isce = glob(join(work_dir,'isce','*','*unw*.tif'))\n",
+    "lidar_sd = glob(join(work_dir,'lidar','banner','snow_depth.tiff'))[0]\n",
+    "lidar_veg = glob(join(work_dir,'lidar','banner','veg_height.tiff'))[0]\n",
+    "coh_jpl = glob(join(work_dir,'jpl','*','*HH*cor*.tif'))\n",
+    "unw_jpl = glob(join(work_dir,'jpl','*','*HH*unw*.tif'))"
    ]
   },
   {
@@ -56,7 +35,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, axes = plt.subplots(len(coh_isce),2, figsize = (12,18))\n",
+    "for i, im in enumerate(coh_isce):\n",
+    "    if i == 0:\n",
+    "        with rasterio.open(im) as src:\n",
+    "            show(src, ax = axes[i, 0])\n",
+    "for i, im in enumerate(coh_jpl):\n",
+    "    if i == 0:\n",
+    "        with rasterio.open(im) as src:\n",
+    "            show(src, ax = axes[i, 1])\n"
+   ]
   }
  ],
  "metadata": {
