--- a/src/MesoPy/meso_play.ipynb
+++ b/src/MesoPy/meso_play.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = Meso(token='0191c61bf7914bd49b8bd7a98abb9469')\n",
+    "m = Meso(token='hidden')\n",
     "precip = m.precip(stid='kfnl', start='201504241800', end='201504271200', units='precip|in')"
    ]
   },
