messing with meso_extract to get only deltas

--- a/src/data_acquisition/download_uavsar.ipynb
+++ b/src/data_acquisition/download_uavsar.ipynb
@@ -31,7 +31,8 @@
     "data_dir = '/bsuscratch/zacharykeskinen/data/uavsar/images'\n",
     "collections = ['Grand Mesa, CO','Lowman, CO', 'Fraser, CO', 'Ironton, CO', 'Peeler Peak, CO', 'Rocky Mountains NP, CO', 'Silverton, CO', 'Telluride, CO', 'Silver City, ID', 'Reynolds Creek, ID', 'Utica, MT']\n",
     "collections = ['Lowman, CO']\n",
-    "#collections = ['Fraser, CO', 'Ironton, CO', 'Peeler Peak, CO', 'Rocky Mountains NP, CO', 'Silverton, CO', 'Telluride, CO', 'Silver City, ID', 'Reynolds Creek, ID', 'Utica, MT']\n"
+    "#collections = ['Fraser, CO', 'Ironton, CO', 'Peeler Peak, CO', 'Rocky Mountains NP, CO', 'Silverton, CO', 'Telluride, CO', 'Silver City, ID', 'Reynolds Creek, ID', 'Utica, MT']\n",
+    "# Californias? Jemeze River, NM, Cameron Pass, CO"
    ]
   },
   {
