switching to scripts for long running coherence tasks

--- a/src/data_acquisition/download_uavsar.ipynb
+++ b/src/data_acquisition/download_uavsar.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,18 +358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'https://datapool.asf.alaska.edu/INTERFEROMETRY_GRD/UA/lowman_23205_21019-018_21021-006_0006d_s01_L090_01_int_grd.zip'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'collection' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/download_uavsar.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/download_uavsar.ipynb#ch0000003vscode-remote?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39masf_search\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39masf\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/download_uavsar.ipynb#ch0000003vscode-remote?line=1'>2</a>\u001b[0m prop \u001b[39m=\u001b[39m collection\u001b[39m.\u001b[39mresults[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mproperties\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/download_uavsar.ipynb#ch0000003vscode-remote?line=2'>3</a>\u001b[0m prop[\u001b[39m'\u001b[39m\u001b[39murl\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'collection' is not defined"
+     ]
     }
    ],
    "source": [
@@ -380,84 +381,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# https://datapool.asf.alaska.edu/INTERFEROMETRY_GRD/UA/lowman_23205_21019-018_21021-006_0006d_s01_L090_01_int_grd.zip\n",
     "inc_res = asf.search(platform = 'UAVSAR',\n",
-    "    processingLevel = (['INC']),\n",
-    "    campaign = 'Lowman, CO',\n",
-    "    # frame= int(prop['frameNumber']),\n",
-    "    relativeOrbit= int(prop['pathNumber']),\n",
-    "    start= prop['startTime'],\n",
-    "    end = prop['stopTime'])"
+    "    processingLevel = (['INTERFEROMETRY_GRD']),\n",
+    "    campaign = 'Fraser, CO')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'beamModeType': 'POL',\n",
-       " 'browse': ['https://datapool.asf.alaska.edu/BROWSE/UA/lowman_23205_21021_006_210322_L090_CX_01.gif'],\n",
-       " 'bytes': '1720400688',\n",
-       " 'centerLat': '44.0219637616697',\n",
-       " 'centerLon': '-115.68941685807',\n",
-       " 'faradayRotation': None,\n",
-       " 'fileID': 'UA_lowman_23205_21021_006_210322_L090_CX_01-INC',\n",
-       " 'fileName': 'lowman_23205_21021_006_210322_L090_CX_01.inc',\n",
-       " 'flightDirection': None,\n",
-       " 'frameNumber': '880',\n",
-       " 'granuleType': 'UAVSAR_POLSAR_SCENE',\n",
-       " 'groupID': 'UA_lowman_23205_21021_006_210322_L090_CX_01',\n",
-       " 'insarStackId': '-1',\n",
-       " 'md5sum': 'a4b97840c20e7b1cbe3fedf39ccacc11',\n",
-       " 'offNadirAngle': None,\n",
-       " 'orbit': '-1',\n",
-       " 'pathNumber': '23205',\n",
-       " 'platform': 'UAVSAR',\n",
-       " 'pointingAngle': None,\n",
-       " 'polarization': 'Full',\n",
-       " 'processingDate': '2021-04-07T00:58:27Z',\n",
-       " 'processingLevel': 'INC',\n",
-       " 'sceneName': 'UA_lowman_23205_21021_006_210322_L090_CX_01',\n",
-       " 'sensor': 'UAVSAR',\n",
-       " 'startTime': '2021-03-22T16:39:19Z',\n",
-       " 'stopTime': '2021-03-22T16:39:19Z',\n",
-       " 'url': 'https://datapool.asf.alaska.edu/INC/UA/lowman_23205_21021_006_210322_L090_CX_01.inc'}"
+       "ASFSearchResults([<asf_search.ASFProduct.ASFProduct at 0x2aaaf0535220>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf058b1f0>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf058bf10>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf058bd90>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaab603b8b0>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf0f1c1c0>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf0f1c6a0>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf0f1c700>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf0f1c970>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf0f1c220>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf0f1c4c0>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf0913550>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf059d040>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf091f640>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf0fb2a60>,\n",
+       "                  <asf_search.ASFProduct.ASFProduct at 0x2aaaf0fb2ac0>])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inc_res[0].properties"
+    "inc_res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection = UavsarCollection(collection = 'Fraser, CO', work_dir = '', clean = True, dates = (pd.to_datetime('20190430'), pd.to_datetime('20220430')), inc = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'https://datapool.asf.alaska.edu/INTERFEROMETRY_GRD/UA/lowman_23205_21019-018_21021-006_0006d_s01_L090_01_int_grd.zip'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:uavsar_pytools.uavsar_collection:Found 16 image pairs\n"
+     ]
     }
    ],
    "source": [
-    "prop['url']"
+    "collection.find_urls()"
    ]
   },
   {
