coherence to snotel done. switching to snow wetness

--- a/src/play/meso_play.ipynb
+++ b/src/play/meso_play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,33 +14,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "m = Meso(token='0191c61bf7914bd49b8bd7a98abb9469')\n",
-    "precip = m.precip(stid='kfnl', start='201504241800', end='201504271200', units='precip|in')"
+    "precip = m.precip(stid='MTM09', start='201504241800', end='201504271200', units='height|m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Millimeters'"
+       "1.7222852512155589"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m.timeseries('201912201942', '202001312130', stid = 'BASI1', units = 'height|m')['UNITS']['snow_depth']"
+    "a = m.timeseries('202002262339', '202003111605', stid = 'AMBC1', units = 'height|m')['STATION'][0]['OBSERVATIONS']['air_temp_set_1']\n",
+    "# 202002262339\n",
+    "# 202003111605\n",
+    "# AMBC1\n",
+    "b = [elem for elem in a if elem is not None]\n",
+    "np.nanmean(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'float' and 'NoneType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/bsuhome/zacharykeskinen/uavsar/src/funcs/meso_play.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/funcs/meso_play.ipynb#ch0000031vscode-remote?line=0'>1</a>\u001b[0m np\u001b[39m.\u001b[39;49mnanmean(np\u001b[39m.\u001b[39;49marray(a))\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mnanmean\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/lib/nanfunctions.py:1047\u001b[0m, in \u001b[0;36mnanmean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m   <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/lib/nanfunctions.py?line=1042'>1043</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mIf a is inexact, then out must be inexact\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/lib/nanfunctions.py?line=1044'>1045</a>\u001b[0m cnt \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msum(\u001b[39m~\u001b[39mmask, axis\u001b[39m=\u001b[39maxis, dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mintp, keepdims\u001b[39m=\u001b[39mkeepdims,\n\u001b[1;32m   <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/lib/nanfunctions.py?line=1045'>1046</a>\u001b[0m              where\u001b[39m=\u001b[39mwhere)\n\u001b[0;32m-> <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/lib/nanfunctions.py?line=1046'>1047</a>\u001b[0m tot \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49msum(arr, axis\u001b[39m=\u001b[39;49maxis, dtype\u001b[39m=\u001b[39;49mdtype, out\u001b[39m=\u001b[39;49mout, keepdims\u001b[39m=\u001b[39;49mkeepdims,\n\u001b[1;32m   <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/lib/nanfunctions.py?line=1047'>1048</a>\u001b[0m              where\u001b[39m=\u001b[39;49mwhere)\n\u001b[1;32m   <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/lib/nanfunctions.py?line=1048'>1049</a>\u001b[0m avg \u001b[39m=\u001b[39m _divide_by_count(tot, cnt, out\u001b[39m=\u001b[39mout)\n\u001b[1;32m   <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/lib/nanfunctions.py?line=1050'>1051</a>\u001b[0m isbad \u001b[39m=\u001b[39m (cnt \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36msum\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/core/fromnumeric.py:2296\u001b[0m, in \u001b[0;36msum\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m   <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/core/fromnumeric.py?line=2292'>2293</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m out\n\u001b[1;32m   <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/core/fromnumeric.py?line=2293'>2294</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m res\n\u001b[0;32m-> <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/core/fromnumeric.py?line=2295'>2296</a>\u001b[0m \u001b[39mreturn\u001b[39;00m _wrapreduction(a, np\u001b[39m.\u001b[39;49madd, \u001b[39m'\u001b[39;49m\u001b[39msum\u001b[39;49m\u001b[39m'\u001b[39;49m, axis, dtype, out, keepdims\u001b[39m=\u001b[39;49mkeepdims,\n\u001b[1;32m   <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/core/fromnumeric.py?line=2296'>2297</a>\u001b[0m                       initial\u001b[39m=\u001b[39;49minitial, where\u001b[39m=\u001b[39;49mwhere)\n",
+      "File \u001b[0;32m~/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/core/fromnumeric.py:86\u001b[0m, in \u001b[0;36m_wrapreduction\u001b[0;34m(obj, ufunc, method, axis, dtype, out, **kwargs)\u001b[0m\n\u001b[1;32m     <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/core/fromnumeric.py?line=82'>83</a>\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/core/fromnumeric.py?line=83'>84</a>\u001b[0m             \u001b[39mreturn\u001b[39;00m reduction(axis\u001b[39m=\u001b[39maxis, out\u001b[39m=\u001b[39mout, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mpasskwargs)\n\u001b[0;32m---> <a href='file:///bsuhome/zacharykeskinen/miniconda3/envs/uavsar/lib/python3.8/site-packages/numpy/core/fromnumeric.py?line=85'>86</a>\u001b[0m \u001b[39mreturn\u001b[39;00m ufunc\u001b[39m.\u001b[39;49mreduce(obj, axis, dtype, out, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mpasskwargs)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'float' and 'NoneType'"
+     ]
+    }
+   ],
+   "source": [
+    "np.nanmean(np.array(a))"
    ]
   },
   {
@@ -1466,6 +1495,75 @@
     "    #print(obs)\n",
     "    plt.scatter(obs['datetime'], obs['snow_depth_set_1'])\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.DataFrame([0,-1,-2,3,4,None,np.nan], index = pd.date_range(start = '20210101',end = '20210201', periods = 7))\n",
+    "df = df.resample('D').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-01-16</th>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-21</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              0\n",
+       "2021-01-16  3.0\n",
+       "2021-01-21  4.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df[0].notnull()) & (df[0]>0)]"
    ]
   },
   {
